bootcamp-treinos-frontend/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-heading: var(--font-inter-tight);
  --font-anton: var(--font-anton);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-online: var(--online);
  --color-streak: var(--streak);
  --color-streak-foreground: var(--streak-foreground);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);
}

:root {
  --radius: 0.65rem;
  --background: oklch(0.948 0.009 99.988);
  --foreground: oklch(0.23 0.012 67.159);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.23 0.012 67.159);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.23 0.012 67.159);
  --primary: oklch(0.633 0.185 39.587);
  --primary-foreground: oklch(0.983 0.01 58.22);
  --secondary: oklch(0.919 0.015 90.241);
  --secondary-foreground: oklch(0.23 0.012 67.159);
  --muted: oklch(0.919 0.015 90.241);
  --muted-foreground: oklch(0.614 0.019 76.021);
  --accent: oklch(0.939 0.028 51.842);
  --accent-foreground: oklch(0.481 0.139 38.797);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.886 0.014 88.692);
  --input: oklch(0.886 0.014 88.692);
  --ring: oklch(0.633 0.185 39.587);
  --online: oklch(0.723 0.219 149.579);
  --streak: oklch(0.939 0.028 51.842);
  --streak-foreground: oklch(0.481 0.139 38.797);
  --chart-1: oklch(0.809 0.105 251.813);
  --chart-2: oklch(0.623 0.214 259.815);
  --chart-3: oklch(0.546 0.245 262.881);
  --chart-4: oklch(0.488 0.243 264.376);
  --chart-5: oklch(0.424 0.199 265.638);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.141 0.005 285.823);
  --sidebar-primary: oklch(0.546 0.245 262.881);
  --sidebar-primary-foreground: oklch(0.97 0.014 254.604);
  --sidebar-accent: oklch(0.967 0.001 286.375);
  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
  --sidebar-border: oklch(0.92 0.004 286.32);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --background: oklch(0.23 0.012 67.159);
  --foreground: oklch(0.948 0.013 82.402);
  --card: oklch(0.273 0.017 74.913);
  --card-foreground: oklch(0.948 0.013 82.402);
  --popover: oklch(0.273 0.017 74.913);
  --popover-foreground: oklch(0.948 0.013 82.402);
  --primary: oklch(0.679 0.177 40.929);
  --primary-foreground: oklch(0.205 0.034 46.852);
  --secondary: oklch(0.294 0.019 73.923);
  --secondary-foreground: oklch(0.948 0.013 82.402);
  --muted: oklch(0.294 0.019 73.923);
  --muted-foreground: oklch(0.661 0.022 77.241);
  --accent: oklch(0.284 0.04 51.076);
  --accent-foreground: oklch(0.828 0.104 47.11);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(0.354 0.02 73.264);
  --input: oklch(0.354 0.02 73.264);
  --ring: oklch(0.679 0.177 40.929);
  --online: oklch(0.723 0.219 149.579);
  --streak: oklch(0.284 0.04 51.076);
  --streak-foreground: oklch(0.828 0.104 47.11);
  --chart-1: oklch(0.809 0.105 251.813);
  --chart-2: oklch(0.623 0.214 259.815);
  --chart-3: oklch(0.546 0.245 262.881);
  --chart-4: oklch(0.488 0.243 264.376);
  --chart-5: oklch(0.424 0.199 265.638);
  --sidebar: oklch(0.21 0.006 285.885);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.623 0.214 259.815);
  --sidebar-primary-foreground: oklch(0.97 0.014 254.604);
  --sidebar-accent: oklch(0.274 0.006 286.033);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.439 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

